file path changed

--- a/index.html
+++ b/index.html
@@ -84,28 +84,28 @@
 
         </div>
         <div class="Section_4">
-            <img class="img-icon-section4" src="/images/Icon-Works.png" alt="Works">
+            <img class="img-icon-section4" src="./images/Icon-Works.png" alt="Works">
             <h2 class="section-title">RECENT WORKS</h2>
                 <div class="slideshow-container">
                     <div class="mySlides fade">
-                        <img src="/images/Showcase.png" alt="Showcase"> 
+                        <img src="./images/Showcase.png" alt="Showcase"> 
                     </div> 
                     <div class="mySlides fade">
-                        <img src="/images/hamburger-494706_1280.QsOg0.jpg" alt="hamburger"> 
+                        <img src="./images/hamburger-494706_1280.QsOg0.jpg" alt="hamburger"> 
                     </div> 
                     <div class="mySlides fade">
-                        <img src="/images/pizza-1949183_640.jk2IQ (1).jpg" alt="pizza"> 
+                        <img src="./images/pizza-1949183_640.jk2IQ (1).jpg" alt="pizza"> 
                     </div> 
                     <div class="mySlides fade">
-                        <img src="/images/hamburger-1414423_640.7ZaFI.jpg" alt="hamburger"> 
+                        <img src="./images/hamburger-1414423_640.7ZaFI.jpg" alt="hamburger"> 
                     </div> 
                     <div class="mySlides fade">
-                        <img src="/images/hot-dog-406019_640.kwlng.jpg" alt="hot-dog"> 
+                        <img src="./images/hot-dog-406019_640.kwlng.jpg" alt="hot-dog"> 
                     </div> 
 
                 </div>
-                    <a  class="prev" onclick="plusSlides(-1)"&#10094;><img  class="btn-prev" src="/images/interface - arrow left.svg" alt="prev"></a>
-                    <a class="next" onclick="plusSlides(1)"&#10095;><img class="btn-next" src="/images/interface - arrow right.svg" alt="next"></a>
+                    <a  class="prev" onclick="plusSlides(-1)"&#10094;><img  class="btn-prev" src="./images/interface - arrow left.svg" alt="prev"></a>
+                    <a class="next" onclick="plusSlides(1)"&#10095;><img class="btn-next" src="./images/interface - arrow right.svg" alt="next"></a>
                 <div class="dot-grop" >
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
@@ -119,59 +119,59 @@
             <img class="img-bg-about-us" src="./images/Icon-Team.png" alt="About Us">
                 <div class="conteiner-section5">  
                     <div class="slide-item1">
-                        <img class="slide-item1-foto" src="/images/Ellipse 3.png" alt="Showcase"> 
+                        <img class="slide-item1-foto" src="./images/Ellipse 3.png" alt="Showcase"> 
                         <div class="card-body">
                              <div class="overlay">MIGUEL OBRAIN</div>
                                 <p class="card-text">CEO & Founder</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="card-link"><img src="/images/linked-in.svg"></a>
-                            <a href="#" class="card-link"><img src="/images/google+.svg"></a>
-                            <a href="#" class="card-link"><img src="/images/facebook.svg"></a>
-                            <a href="#" class="card-link"><img src="/images/twitter.svg"></a>
+                            <a href="#" class="card-link"><img src="./images/linked-in.svg"></a>
+                            <a href="#" class="card-link"><img src="./images/google+.svg"></a>
+                            <a href="#" class="card-link"><img src="./images/facebook.svg"></a>
+                            <a href="#" class="card-link"><img src="./images/twitter.svg"></a>
                         </div>
                     </div> 
                     <div class="slide-item1">
-                        <img class="slide-item1-foto" src="/images/Ellipse 2.png" alt="Showcase"> 
+                        <img class="slide-item1-foto" src="./images/Ellipse 2.png" alt="Showcase"> 
                             <div class="card-body">
                                 <div class="overlay">JACKIE CARROLL</div>
                                    <p class="card-text">Art Director</p>
                             </div>   
                        <div class="card-footer">
-                           <a href="#" class="card-link"><img src="/images/behance.svg"></a>
-                           <a href="#" class="card-link"><img src="/images/linked-in.svg"></a>
-                           <a href="#" class="card-link"><img src="/images/google+.svg"></a>
-                           <a href="#" class="card-link"><img src="/images/facebook.svg"></a>
-                           <a href="#" class="card-link"><img src="/images/twitter.svg"></a>
+                           <a href="#" class="card-link"><img src="./images/behance.svg"></a>
+                           <a href="#" class="card-link"><img src="./images/linked-in.svg"></a>
+                           <a href="#" class="card-link"><img src="./images/google+.svg"></a>
+                           <a href="#" class="card-link"><img src="./images/facebook.svg"></a>
+                           <a href="#" class="card-link"><img src="./images/twitter.svg"></a>
                        </div>
                     </div> 
                     <div class="slide-item1">
-                         <img class="slide-item1-foto" src="/images/Ellipse 1.png" alt="Showcase">
+                         <img class="slide-item1-foto" src="./images/Ellipse 1.png" alt="Showcase">
                          <div class="card-body">  
                             <div class="overlay">IDA MORRISON</div>
                             <p class="card-text">Designer</p>
                         </div> 
                         <div class="card-footer">
-                           <a href="#" class="card-link"><img src="/images/behance.svg"></a>
-                           <a href="#" class="card-link"><img src="/images/linked-in.svg"></a>
-                           <a href="#" class="card-link"><img src="/images/google+.svg"></a>
-                           <a href="#" class="card-link"><img src="/images/facebook.svg"></a>
-                           <a href="#" class="card-link"><img src="/images/twitter.svg"></a>
+                           <a href="#" class="card-link"><img src="./images/behance.svg"></a>
+                           <a href="#" class="card-link"><img src="./images/linked-in.svg"></a>
+                           <a href="#" class="card-link"><img src="./images/google+.svg"></a>
+                           <a href="#" class="card-link"><img src="./images/facebook.svg"></a>
+                           <a href="#" class="card-link"><img src="./images/twitter.svg"></a>
                         </div>
                     </div> 
                    
-                        <a  class="conteiner-section5-prev" onclick="plusSlides(-1)"&#10094;><img  class="btn-prev" src="/images/interface - arrow left.svg" alt="prev"></a>
-                        <a class="conteiner-section5-next" onclick="plusSlides(1)"&#10095;><img class="btn-next" src="/images/interface - arrow right.svg" alt="next"></a>
+                        <a  class="conteiner-section5-prev" onclick="plusSlides(-1)"&#10094;><img  class="btn-prev" src="./images/interface - arrow left.svg" alt="prev"></a>
+                        <a class="conteiner-section5-next" onclick="plusSlides(1)"&#10095;><img class="btn-next" src="./images/interface - arrow right.svg" alt="next"></a>
                 </div>
 
 
         </div>
         <div class="Section_6">
-            <img class="img-icon-section4" src="/images/Layer 7.png" alt="Works">
+            <img class="img-icon-section4" src="./images/Layer 7.png" alt="Works">
             <h2 class="section-title">GET IN TOUCH</h2>
             <div class="sidenav">
-                <a  class="sidenav-item adress"><img src="/images/Icon-Address.png"></a><br>
-                <a  class="sidenav-item phone" ><img src="/images/Layer 8.png"></a>
+                <a  class="sidenav-item adress"><img src="./images/Icon-Address.png"></a><br>
+                <a  class="sidenav-item phone" ><img src="./images/Layer 8.png"></a>
             </div>
             <form action="">
                 <label for="name"></label>
