changed path images

--- a/index.html
+++ b/index.html
@@ -51,24 +51,24 @@
             <div class="conteiner-section3">
                 <div class="col-item">
                     <div class="card" style="background-color: #DBDBDB;" >
-                        <img src="/images/Icon-Graphic.png" class="icon-img" alt="Icon-Graphic">                     
+                        <img src="./images/Icon-Graphic.png" class="icon-img" alt="Icon-Graphic">                     
                         <h5 class="card-name">GRAPHIC DESIGN</h5>
                         <p class="text">Cras mattis consectetur purus sit amet fermentum.</p>
                    </div> 
                     <div class="card">
-                        <img src="/images/Icon-SEO.png" class="icon-img" alt="Icon-Seo">
+                        <img src="./images/Icon-SEO.png" class="icon-img" alt="Icon-Seo">
                         <h5 class="card-name">SEO & MARKETING</h5>
                         <p class="text">Cras mattis consectetur purus sit amet fermentum.</p>
                     </div>  
                 </div>
                 <div class="col-item">
                     <div class="card">
-                        <img src="/images/Icon-Web.png" class="icon-img" alt="Icon-Web">
+                        <img src="./images/Icon-Web.png" class="icon-img" alt="Icon-Web">
                         <h5 class="card-name">WEB DEVELOPMENT</h5>
                         <p class="text">Cras mattis consectetur purus sit amet fermentum.</p>
                     </div>
                     <div class="card" style="background-color: #DBDBDB;">
-                        <img src="/images/Icon-Mobile.png" class="icon-img" alt="Icon-Mobile">
+                        <img src="./images/Icon-Mobile.png" class="icon-img" alt="Icon-Mobile">
                         <h5 class="card-name">MOBILE DEVELOPMENT</h5>
                         <p class="text">Cras mattis consectetur purus sit amet fermentum.</p> 
                     </div>
@@ -185,6 +185,6 @@
         </div>
        
     </div>
-    <script src="/js/file.js" type="text/javascript"></script>
+    <script src="./js/file.js" type="text/javascript"></script>
 </body>
 </html>
