burger-menu and  added slider-arrows section5

--- a/index.html
+++ b/index.html
@@ -23,33 +23,33 @@
                         <nav class="header-menu">
                             <ul class="menu-items">
                                 <li class="nav-menu-item">
-                                    <a  class="header-link" href="#HOME">HOME</a>  
+                                    <a  class="header-link" href="#home">HOME</a>  
                                 </li>
                                 <li class="nav-menu-item">
-                                    <a class="header-link" href="#ABOUT"> ABOUT</a>   
+                                    <a class="header-link" href="#about"> ABOUT</a>   
                                 </li>
                                 <li class="nav-menu-item">
-                                    <a class="header-link" href="#SERVICES">SERVICES </a>    
+                                    <a class="header-link" href="#services">SERVICES </a>    
                                 </li>
                                 <li class="nav-menu-item">
-                                    <a class="header-link" href="#WORKS"> WORKS</a> 
+                                    <a class="header-link" href="#work"> WORKS</a> 
                                 </li>
                                 <li class="nav-menu-item">
-                                    <a class="header-link" href="#CONTACT">CONTACT</a>
+                                    <a class="header-link" href="#contact">CONTACT</a>
                                 </li>
                             </ul>
                         </nav>    
                     </div>
                  </div>     
             </header>         
-                    <div class="header">
+                    <div class="header" id="TopScoll">
                         <h1 class="header-title">CREATIVE DIGITAL PROJECT</h1>
                         <p class="header-subtitle">Duis mollis, est non commodo luctus,<br>
                             nisi erat porttitor ligula, eget lacinia odio sem nec elit.
                         </p>
                     </div>        
         </div>
-        <div class="Section_2" id="Topscroll">
+        <div id="about" class="Section_2">
             <div class="section_2-item conteiner-icon">
                 <img  class="icon-section2" src="./images/Rectangle_8.png" alt="Icon-AboutUs"> 
                 <div class="block-icon">
@@ -65,7 +65,7 @@
                 <button type="button" class="btn btn-learn">Learn More</button>
             </div>
         </div>
-        <div class="Section3">
+        <div id="services" class="Section3">
             <div class="conteiner-section3">
                 <div class="col-item">
                     <div class="card" style="background-color: #DBDBDB;" >
@@ -100,7 +100,7 @@
                 </div>
             </div>
         </div>
-        <div class="Section_4">
+        <div id="works" class="Section_4">
             <img class="img-icon-section4" src="./images/Icon-Works.png" alt="Works">
             <h2 class="section-title">RECENT WORKS</h2>
                 <div class="slideshow-container">      
@@ -311,7 +311,7 @@
                    
                 </div>
         </div>
-        <div class="Section_6">
+        <div  id="contact" class="Section_6">
             <img class="img-icon-section4" src="./images/Layer7.png" alt="Works">
             <h2 class="section-title">GET IN TOUCH</h2>
            
