--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="conteiner">
-        <div class="Section_1">
+        <div id="home" class="Section_1">
            <header class="header-nav">
                <div class="conteiner-nav">
                     <div class="nav-menu">
@@ -32,7 +32,7 @@
                                     <a class="header-link" href="#services">SERVICES </a>    
                                 </li>
                                 <li class="nav-menu-item">
-                                    <a class="header-link" href="#work"> WORKS</a> 
+                                    <a class="header-link" href="#works"> WORKS</a> 
                                 </li>
                                 <li class="nav-menu-item">
                                     <a class="header-link" href="#contact">CONTACT</a>
@@ -60,7 +60,7 @@
             <div class="section_2-item">
                 <p class="section_2-subtitle">
                     Nullam quis risus eget urna <b>mollis ornare</b> vel eu leo. Donec id elit non mi porta gravida at eget metus. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.<br><br>
-                    <b>Morbi leo risus</b>, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Maecenas faucibus mollis interdum. Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.
+                    <b class="divided">Morbi leo risus</b>, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Maecenas faucibus mollis interdum. Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis.
                 </p>
                 <button type="button" class="btn btn-learn">Learn More</button>
             </div>
@@ -357,7 +357,6 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
- 
     <script src="./js/file.js" type="text/javascript"></script>
     <script src="./js/slide.js" type="text/javascript"></script>
 
