adaptive section 3, 6, footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" type="text/css"href="./css/style.css">
     <title>Project</title>
@@ -51,12 +52,15 @@
         </div>
         <div id="about" class="Section_2">
             <div class="section_2-item conteiner-icon">
-                <img  class="icon-section2" src="./images/Rectangle_8.png" alt="Icon-AboutUs"> 
-                <div class="block-icon">
-                    <img class="img-bg-about-us" src="./images/Icon-AboutUs.png" alt="About Us">
-                    <h2 class="section-title">ABOUT US</h2>          
-               </div>
-            </div>
+                <div class="pic_container">
+                    <img  class="icon-section2" src="./images/Rectangle_8.png" alt="Icon-AboutUs"> 
+                    <div class="block-icon">
+                        <img class="img-bg-about-us" src="./images/Icon-AboutUs.png" alt="About Us">
+                        <h2 class="section-title">ABOUT US</h2>          
+                   </div>
+                </div>
+            </div>    
+                         
             <div class="section_2-item">
                 <p class="section_2-subtitle">
                     Nullam quis risus eget urna <b>mollis ornare</b> vel eu leo. Donec id elit non mi porta gravida at eget metus. Donec ullamcorper nulla non metus auctor fringilla. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.<br><br>
